syntax = "proto3";

package security;

import "models/security/security.proto";
import "requests/security/query_security_request.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "QuerySecurityResponseProtos";

message QuerySecurityResponseProto {
  string object_class = 1;
  string version = 2;

  //The input that was provided for this request.
  security.QuerySecurityRequestProto query_security_input = 20;

  //The security (or securities) that was matched by this request.
  repeated security.SecurityProto security_response = 30;
}


